Upgrade it-sonar-performance to sonar-runner 2.3