@@ -9,12 +9,7 @@ import com.sonar.orchestrator.Orchestrator;
 import com.sonar.orchestrator.build.MavenBuild;
 import com.sonar.orchestrator.build.SonarRunner;
 import com.sonar.orchestrator.locator.FileLocation;
-import org.junit.Before;
-import org.junit.BeforeClass;
-import org.junit.ClassRule;
-import org.junit.Ignore;
-import org.junit.Rule;
-import org.junit.Test;
+import org.junit.*;
 import org.junit.rules.TestName;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -22,12 +17,8 @@ import org.slf4j.LoggerFactory;
 import static org.fest.assertions.Assertions.assertThat;
 
 /**
- *
- *
  * AUTOMATED TEST
  * This test is executed by Jenkins in a dedicated stable environment
- *
- *
  */
 public class SonarRunnerPerformanceTest {
 
@@ -36,8 +27,8 @@ public class SonarRunnerPerformanceTest {
 
   @ClassRule
   public static Orchestrator orchestrator = Orchestrator.builderEnv()
-      .restoreProfileAtStartup(FileLocation.ofClasspath("/sonar-way-3.6.xml"))
-      .build();
+    .restoreProfileAtStartup(FileLocation.ofClasspath("/sonar-way-3.6.xml"))
+    .build();
 
   @Rule
   public TestName testName = new TestName();
@@ -46,8 +37,8 @@ public class SonarRunnerPerformanceTest {
   public static void setUp() {
     // Execute sonar to generate jacoco reports
     MavenBuild build = MavenBuild.create(FileLocation.ofShared("it-sonar-performancing/tika-1.3/pom.xml").getFile())
-        .setEnvironmentVariable("MAVEN_OPTS", "-Xmx512m -server")
-        .setGoals("clean test-compile");
+      .setEnvironmentVariable("MAVEN_OPTS", "-Xmx512m -server")
+      .setGoals("clean test-compile");
     orchestrator.executeBuild(build);
 
     // Set coverage per test profile as goal, waiting for orchestrator API to set maven profile
@@ -68,11 +59,12 @@ public class SonarRunnerPerformanceTest {
 
   @Test
   public void most_basic_scan() {
-    SonarRunner runner = newSonarRunner("-Xmx512m -server",
-        "sonar.dynamicAnalysis", "false",
-        "sonar.profile", "empty",
-        "sonar.cpd.skip", "true"
-        );
+    SonarRunner runner = newSonarRunner(
+      "-Xmx512m -server -XX:MaxPermSize=64m",
+      "sonar.dynamicAnalysis", "false",
+      "sonar.profile", "empty",
+      "sonar.cpd.skip", "true"
+    );
     long start = System.currentTimeMillis();
     orchestrator.executeBuild(runner);
     long duration = System.currentTimeMillis() - start;
@@ -82,10 +74,11 @@ public class SonarRunnerPerformanceTest {
   @Test
   public void scan_with_java_rules() {
     // checkstyle, pmd and squid but not findbugs
-    SonarRunner runner = newSonarRunner("-Xmx512m -server",
-        "sonar.dynamicAnalysis", "false",
-        "sonar.profile", "sonar-way"
-        );
+    SonarRunner runner = newSonarRunner(
+      "-Xmx512m -server -XX:MaxPermSize=64m",
+      "sonar.dynamicAnalysis", "false",
+      "sonar.profile", "sonar-way"
+    );
     long start = System.currentTimeMillis();
     orchestrator.executeBuild(runner);
     long duration = System.currentTimeMillis() - start;
@@ -96,11 +89,12 @@ public class SonarRunnerPerformanceTest {
   @Test
   public void dry_run_scan_with_java_rules() {
     // checkstyle, pmd and squid but not findbugs
-    SonarRunner runner = newSonarRunner("-Xmx512m -server",
-        "sonar.dynamicAnalysis", "false",
-        "sonar.profile", "sonar-way",
-        "sonar.dryRun", "true"
-        );
+    SonarRunner runner = newSonarRunner(
+      "-Xmx512m -server -XX:MaxPermSize=64m",
+      "sonar.dynamicAnalysis", "false",
+      "sonar.profile", "sonar-way",
+      "sonar.dryRun", "true"
+    );
     long start = System.currentTimeMillis();
     orchestrator.executeBuild(runner);
     long duration = System.currentTimeMillis() - start;
@@ -111,12 +105,13 @@ public class SonarRunnerPerformanceTest {
   @Test
   @Ignore("To be enabled when most_basic_scan passes")
   public void scan_with_no_rule_and_coverage_per_test() {
-    SonarRunner runner = newSonarRunner("-Xmx512m -server",
-        "sonar.dynamicAnalysis", "reuseReports",
-        "sonar.surefire.reportsPath", "target/surefire-reports",
-        "sonar.jacoco.reportPath", "target/jacoco.exec",
-        "sonar.profile", "empty"
-        );
+    SonarRunner runner = newSonarRunner(
+      "-Xmx512m -server -XX:MaxPermSize=64m",
+      "sonar.dynamicAnalysis", "reuseReports",
+      "sonar.surefire.reportsPath", "target/surefire-reports",
+      "sonar.jacoco.reportPath", "target/jacoco.exec",
+      "sonar.profile", "empty"
+    );
     long start = System.currentTimeMillis();
     orchestrator.executeBuild(runner);
     long duration = System.currentTimeMillis() - start;
@@ -126,22 +121,22 @@ public class SonarRunnerPerformanceTest {
   @Test
   public void should_not_fail_with_limited_xmx_memory_and_no_coverage_per_test() {
     orchestrator.executeBuild(
-        newSonarRunner("-Xmx80m -server -XX:-HeapDumpOnOutOfMemoryError", "sonar.dynamicAnalysis", "false")
-        );
+      newSonarRunner("-Xmx80m -server -XX:-HeapDumpOnOutOfMemoryError", "sonar.dynamicAnalysis", "false")
+    );
   }
 
   private static SonarRunner newSonarRunner(String sonarRunnerOpts, String... props) {
     return SonarRunner.create()
-        .setProperties(props)
-        .setEnvironmentVariable("SONAR_RUNNER_OPTS", sonarRunnerOpts)
-        .setRunnerVersion("2.2.2")
-        .setProjectDir(FileLocation.ofShared("it-sonar-performancing/tika-1.3").getFile());
+      .setProperties(props)
+      .setEnvironmentVariable("SONAR_RUNNER_OPTS", sonarRunnerOpts)
+      .setRunnerVersion("2.3")
+      .setProjectDir(FileLocation.ofShared("it-sonar-performancing/tika-1.3").getFile());
   }
 
   private void assertDuration(long duration, long expectedDuration) {
     double variation = 100.0 * (0.0 + duration - expectedDuration) / expectedDuration;
+    assertThat(Math.abs(variation)).as(String.format("Expected %d ms, got %d ms", expectedDuration, duration)).isLessThan(ACCEPTED_DURATION_VARIATION_IN_PERCENTS);
     LOG.info("Test '" + testName.getMethodName() + " ' executed in " + duration + " ms (" + variation + "% from target)");
-    assertThat(Math.abs(variation)).isLessThan(ACCEPTED_DURATION_VARIATION_IN_PERCENTS);
   }
 
 }
